fixed project title alignment in mobile

--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -102,7 +102,6 @@ html, body {
 
     .projects-title {
         top: 0px;
-        left: 0px;
     }
     
 }
